[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palette_gen"
version = "2.0.0"
description = "color scheme generator"
requires-python = ">=3.13"
authors = [{ name = "qdbp" }]
urls = { Homepage = "http://github.com/qdbp/palette_gen" }
dependencies = [
    "numpy",
    "numba",
    "matplotlib",
    "scipy",
    "pyyaml",
    "colour-science",
    "plotly",
]

[project.scripts]
palette-gen = "palette_gen:main"

[tool.setuptools.packages.find]
include = ["palette_gen*"]

[dependency-groups]
test = ["pytest"]
lint = ["ruff", "black"]
typecheck = ["mypy"]
dev = [
    { include-group = "lint" },
    { include-group = "typecheck" },
    { include-group = "test" },
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "silent"
implicit_optional = true
check_untyped_defs = true
allow_redefinition = true

[tool.ruff]
exclude = ['notebooks/**']

line-length = 105
target-version = "py313"
select = ["ALL"]
ignore = [
    "T201",
    "NPY002",
    "TD",
    "EM",
    "ANN",
    "E402",
    "PLC2401",
    "PLC2403",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "S101",
    "RET505",
    "RET506",
    "RET507",
    "E203",
    "RET508",
    "PD002",
    "PD901",
    "SIM108",
    "E266",
    "FIX002",
    "S311",
    "TRY003",
    "S603",
    "E731",
    "PLR2004",
    "TC001",
    "TC002",
    "TC003",
    "PD011",
    "COM812",
    "PT011",
    "C",
    "D",
    "G",
    "E741",
    "ARG002",
    "PLW2901",
    "N",
    "SLF001",
    "PGH003",
    "PGH004",
    "RUF002",
    "RUF003",
    "PYI042",
    "B905",
    "BLE001",
    "LOG015",
    "PLC0415",
]
unfixable = ["F841", "ERA", "RUF100"]
